[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Images/TravelScene/brasilia.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/TravelScene/ruralwillys.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/TravelScene/Rodoviária_de_Brasília_with_busao.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/TravelScene/zebrinha.png" type="Texture" id=4]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Themes/CharacterChoice.tres" type="Theme" id=6]
[ext_resource path="res://scenes/GUI/TravelScene.gd" type="Script" id=7]
[ext_resource path="res://assets/Images/TravelScene/placa.png" type="Texture" id=8]
[ext_resource path="res://assets/Images/TravelScene/ruralwillysbloqueada.png" type="Texture" id=9]
[ext_resource path="res://assets/Images/TravelScene/zebrinhabloqueada.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/sound_effects/rodoviaria-audio-novo.mp3" type="AudioStream" id=11]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 573, 288 )
scale = Vector2( 0.384167, 0.384167 )
texture = ExtResource( 3 )

[node name="ZebrinhaButton" type="TextureButton" parent="."]
margin_left = 52.0
margin_top = 293.0
margin_right = 349.0
margin_bottom = 419.0

[node name="Zebrinha" type="Sprite" parent="ZebrinhaButton"]
position = Vector2( 134, 79 )
scale = Vector2( 0.245, 0.245 )
texture = ExtResource( 4 )

[node name="ZebrinhaBloqueada" type="Sprite" parent="."]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
position = Vector2( 186, 372 )
scale = Vector2( 0.245, 0.245 )
texture = ExtResource( 10 )

[node name="RuralWillysButton" type="TextureButton" parent="."]
margin_left = 454.0
margin_top = 300.0
margin_right = 659.0
margin_bottom = 494.0

[node name="RuralWillys" type="Sprite" parent="RuralWillysButton"]
position = Vector2( 101, 64 )
scale = Vector2( 0.287182, 0.287182 )
texture = ExtResource( 2 )

[node name="RuralWillysBloqueada" type="Sprite" parent="."]
modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
position = Vector2( 556, 363 )
scale = Vector2( 0.287, 0.287 )
texture = ExtResource( 9 )

[node name="BrasiliaButton" type="TextureButton" parent="."]
margin_left = 757.0
margin_top = 262.0
margin_right = 1003.0
margin_bottom = 391.0

[node name="Brasilia" type="Sprite" parent="BrasiliaButton"]
position = Vector2( 136, 49 )
scale = Vector2( 0.281909, 0.281909 )
texture = ExtResource( 1 )

[node name="MessageBox" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 228.0
theme = ExtResource( 6 )

[node name="MessageText" type="Label" parent="MessageBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.5
margin_top = -80.0
margin_right = 233.5
margin_bottom = 80.0
custom_colors/font_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
text = "Escolha seu meio de transporte"
align = 1
valign = 1

[node name="Placa" type="Sprite" parent="."]
position = Vector2( 595, 220 )
scale = Vector2( 0.158002, 0.158002 )
texture = ExtResource( 8 )

[node name="CarSoundEffect" parent="." instance=ExtResource( 12 )]
stream = ExtResource( 11 )

[node name="MainMusic" parent="." instance=ExtResource( 12 )]

[connection signal="pressed" from="ZebrinhaButton" to="." method="_on_ZebrinhaButton_pressed"]
[connection signal="pressed" from="RuralWillysButton" to="." method="_on_RuralWillysButton_pressed"]
[connection signal="pressed" from="BrasiliaButton" to="." method="_on_BrasiliaButton_pressed"]
